// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`KryptosKit (OKP) from auto b64 1`] = `
{
  "algorithm": "EdDSA",
  "createdAt": 2024-01-01T08:00:00.000Z,
  "curve": "Ed25519",
  "expiresIn": -1,
  "hasPrivateKey": true,
  "hasPublicKey": true,
  "id": "6e6f84b0-e125-5e3f-90ae-c65269668d98",
  "isActive": true,
  "isExpired": false,
  "isExternal": false,
  "notBefore": 2024-01-01T08:00:00.000Z,
  "operations": [],
  "type": "OKP",
  "updatedAt": 2024-01-01T08:00:00.000Z,
  "use": "sig",
}
`;

exports[`KryptosKit (OKP) from auto b64 2`] = `
{
  "alg": "EdDSA",
  "crv": "Ed25519",
  "iat": 1704096000,
  "key_ops": [],
  "kid": "6e6f84b0-e125-5e3f-90ae-c65269668d98",
  "kty": "OKP",
  "nbf": 1704096000,
  "uat": 1704096000,
  "use": "sig",
  "x": "GRCwCA6lChosFGMQwxGiHCdzblfvCz0FNiRtTnm1qqc",
}
`;

exports[`KryptosKit (OKP) from auto b64 3`] = `
{
  "algorithm": "EdDSA",
  "curve": "Ed25519",
  "privateKey": "MC4CAQAwBQYDK2VwBCIEIBwKJlvoh1ngd9LRd7dtvGOSqW4uZamdvIu0ABD2AkxL",
  "publicKey": "MCowBQYDK2VwAyEAGRCwCA6lChosFGMQwxGiHCdzblfvCz0FNiRtTnm1qqc",
  "type": "OKP",
  "use": "sig",
}
`;

exports[`KryptosKit (OKP) from auto jwk 1`] = `
{
  "algorithm": "EdDSA",
  "createdAt": 2024-01-01T08:00:00.000Z,
  "curve": "Ed25519",
  "expiresIn": -1,
  "hasPrivateKey": true,
  "hasPublicKey": true,
  "id": "6e6f84b0-e125-5e3f-90ae-c65269668d98",
  "isActive": true,
  "isExpired": false,
  "isExternal": true,
  "notBefore": 2024-01-01T08:00:00.000Z,
  "operations": [],
  "type": "OKP",
  "updatedAt": 2024-01-01T08:00:00.000Z,
  "use": "sig",
}
`;

exports[`KryptosKit (OKP) from auto jwk 2`] = `
{
  "alg": "EdDSA",
  "crv": "Ed25519",
  "iat": 1704096000,
  "key_ops": [],
  "kid": "6e6f84b0-e125-5e3f-90ae-c65269668d98",
  "kty": "OKP",
  "nbf": 1704096000,
  "uat": 1704096000,
  "use": "sig",
  "x": "eTgk2sA8y7_9q8MjEPskpM4mAUZqtXmwEiHwy249kj4",
}
`;

exports[`KryptosKit (OKP) from auto jwk 3`] = `
{
  "alg": "EdDSA",
  "crv": "Ed25519",
  "d": "CDqMp2HAyaLiV8Xdt8ouEnhYbZtRXlFAsEkccUCcpQk",
  "kty": "OKP",
  "use": "sig",
  "x": "eTgk2sA8y7_9q8MjEPskpM4mAUZqtXmwEiHwy249kj4",
}
`;

exports[`KryptosKit (OKP) from auto pem 1`] = `
{
  "algorithm": "EdDSA",
  "createdAt": 2024-01-01T08:00:00.000Z,
  "curve": "Ed25519",
  "expiresIn": -1,
  "hasPrivateKey": true,
  "hasPublicKey": true,
  "id": "6e6f84b0-e125-5e3f-90ae-c65269668d98",
  "isActive": true,
  "isExpired": false,
  "isExternal": false,
  "notBefore": 2024-01-01T08:00:00.000Z,
  "operations": [],
  "type": "OKP",
  "updatedAt": 2024-01-01T08:00:00.000Z,
  "use": "sig",
}
`;

exports[`KryptosKit (OKP) from auto pem 2`] = `
{
  "alg": "EdDSA",
  "crv": "Ed25519",
  "iat": 1704096000,
  "key_ops": [],
  "kid": "6e6f84b0-e125-5e3f-90ae-c65269668d98",
  "kty": "OKP",
  "nbf": 1704096000,
  "uat": 1704096000,
  "use": "sig",
  "x": "FqCTfRe3gmMUYSmAmAl8id-ZYSsmFpKHXmh-ZOaPOfM",
}
`;

exports[`KryptosKit (OKP) from auto pem 3`] = `
{
  "algorithm": "EdDSA",
  "curve": "Ed25519",
  "privateKey": "-----BEGIN PRIVATE KEY-----
MC4CAQAwBQYDK2VwBCIEIA5gn8ikyFzW8+jNHtl4CvQvLSC2xXJVKTqsdY49bwma
-----END PRIVATE KEY-----
",
  "publicKey": "-----BEGIN PUBLIC KEY-----
MCowBQYDK2VwAyEAFqCTfRe3gmMUYSmAmAl8id+ZYSsmFpKHXmh+ZOaPOfM=
-----END PUBLIC KEY-----
",
  "type": "OKP",
  "use": "sig",
}
`;

exports[`KryptosKit (OKP) from b64 1`] = `
{
  "algorithm": "EdDSA",
  "createdAt": 2024-01-01T08:00:00.000Z,
  "curve": "Ed25519",
  "expiresIn": -1,
  "hasPrivateKey": true,
  "hasPublicKey": true,
  "id": "6e6f84b0-e125-5e3f-90ae-c65269668d98",
  "isActive": true,
  "isExpired": false,
  "isExternal": false,
  "notBefore": 2024-01-01T08:00:00.000Z,
  "operations": [],
  "type": "OKP",
  "updatedAt": 2024-01-01T08:00:00.000Z,
  "use": "sig",
}
`;

exports[`KryptosKit (OKP) from b64 2`] = `
{
  "alg": "EdDSA",
  "crv": "Ed25519",
  "iat": 1704096000,
  "key_ops": [],
  "kid": "6e6f84b0-e125-5e3f-90ae-c65269668d98",
  "kty": "OKP",
  "nbf": 1704096000,
  "uat": 1704096000,
  "use": "sig",
  "x": "GRCwCA6lChosFGMQwxGiHCdzblfvCz0FNiRtTnm1qqc",
}
`;

exports[`KryptosKit (OKP) from b64 3`] = `
{
  "algorithm": "EdDSA",
  "curve": "Ed25519",
  "privateKey": "MC4CAQAwBQYDK2VwBCIEIBwKJlvoh1ngd9LRd7dtvGOSqW4uZamdvIu0ABD2AkxL",
  "publicKey": "MCowBQYDK2VwAyEAGRCwCA6lChosFGMQwxGiHCdzblfvCz0FNiRtTnm1qqc",
  "type": "OKP",
  "use": "sig",
}
`;

exports[`KryptosKit (OKP) from jwk 1`] = `
{
  "algorithm": "EdDSA",
  "createdAt": 2024-01-01T08:00:00.000Z,
  "curve": "Ed25519",
  "expiresIn": -1,
  "hasPrivateKey": true,
  "hasPublicKey": true,
  "id": "6e6f84b0-e125-5e3f-90ae-c65269668d98",
  "isActive": true,
  "isExpired": false,
  "isExternal": true,
  "notBefore": 2024-01-01T08:00:00.000Z,
  "operations": [],
  "type": "OKP",
  "updatedAt": 2024-01-01T08:00:00.000Z,
  "use": "sig",
}
`;

exports[`KryptosKit (OKP) from jwk 2`] = `
{
  "alg": "EdDSA",
  "crv": "Ed25519",
  "iat": 1704096000,
  "key_ops": [],
  "kid": "6e6f84b0-e125-5e3f-90ae-c65269668d98",
  "kty": "OKP",
  "nbf": 1704096000,
  "uat": 1704096000,
  "use": "sig",
  "x": "eTgk2sA8y7_9q8MjEPskpM4mAUZqtXmwEiHwy249kj4",
}
`;

exports[`KryptosKit (OKP) from jwk 3`] = `
{
  "alg": "EdDSA",
  "crv": "Ed25519",
  "d": "CDqMp2HAyaLiV8Xdt8ouEnhYbZtRXlFAsEkccUCcpQk",
  "kty": "OKP",
  "use": "sig",
  "x": "eTgk2sA8y7_9q8MjEPskpM4mAUZqtXmwEiHwy249kj4",
}
`;

exports[`KryptosKit (OKP) from pem 1`] = `
{
  "algorithm": "EdDSA",
  "createdAt": 2024-01-01T08:00:00.000Z,
  "curve": "Ed25519",
  "expiresIn": -1,
  "hasPrivateKey": true,
  "hasPublicKey": true,
  "id": "6e6f84b0-e125-5e3f-90ae-c65269668d98",
  "isActive": true,
  "isExpired": false,
  "isExternal": false,
  "notBefore": 2024-01-01T08:00:00.000Z,
  "operations": [],
  "type": "OKP",
  "updatedAt": 2024-01-01T08:00:00.000Z,
  "use": "sig",
}
`;

exports[`KryptosKit (OKP) from pem 2`] = `
{
  "alg": "EdDSA",
  "crv": "Ed25519",
  "iat": 1704096000,
  "key_ops": [],
  "kid": "6e6f84b0-e125-5e3f-90ae-c65269668d98",
  "kty": "OKP",
  "nbf": 1704096000,
  "uat": 1704096000,
  "use": "sig",
  "x": "FqCTfRe3gmMUYSmAmAl8id-ZYSsmFpKHXmh-ZOaPOfM",
}
`;

exports[`KryptosKit (OKP) from pem 3`] = `
{
  "algorithm": "EdDSA",
  "curve": "Ed25519",
  "privateKey": "-----BEGIN PRIVATE KEY-----
MC4CAQAwBQYDK2VwBCIEIA5gn8ikyFzW8+jNHtl4CvQvLSC2xXJVKTqsdY49bwma
-----END PRIVATE KEY-----
",
  "publicKey": "-----BEGIN PUBLIC KEY-----
MCowBQYDK2VwAyEAFqCTfRe3gmMUYSmAmAl8id+ZYSsmFpKHXmh+ZOaPOfM=
-----END PUBLIC KEY-----
",
  "type": "OKP",
  "use": "sig",
}
`;

exports[`KryptosKit (OKP) make auto 1`] = `
{
  "algorithm": "ECDH-ES+A128GCMKW",
  "createdAt": 2024-01-01T08:00:00.000Z,
  "curve": "P-256",
  "expiresIn": -1,
  "hasPrivateKey": true,
  "hasPublicKey": true,
  "id": "6e6f84b0-e125-5e3f-90ae-c65269668d98",
  "isActive": true,
  "isExpired": false,
  "isExternal": false,
  "notBefore": 2024-01-01T08:00:00.000Z,
  "operations": [
    "encrypt",
    "decrypt",
  ],
  "type": "EC",
  "updatedAt": 2024-01-01T08:00:00.000Z,
  "use": "enc",
}
`;

exports[`KryptosKit (OKP) make enc 1`] = `
{
  "algorithm": "ECDH-ES",
  "createdAt": 2024-01-01T08:00:00.000Z,
  "curve": "X25519",
  "encryption": "A256GCM",
  "expiresIn": -1,
  "hasPrivateKey": true,
  "hasPublicKey": true,
  "id": "6e6f84b0-e125-5e3f-90ae-c65269668d98",
  "isActive": true,
  "isExpired": false,
  "isExternal": false,
  "notBefore": 2024-01-01T08:00:00.000Z,
  "operations": [
    "encrypt",
    "decrypt",
  ],
  "type": "OKP",
  "updatedAt": 2024-01-01T08:00:00.000Z,
  "use": "enc",
}
`;

exports[`KryptosKit (OKP) make sig 1`] = `
{
  "algorithm": "EdDSA",
  "createdAt": 2024-01-01T08:00:00.000Z,
  "curve": "Ed448",
  "expiresIn": -1,
  "hasPrivateKey": true,
  "hasPublicKey": true,
  "id": "6e6f84b0-e125-5e3f-90ae-c65269668d98",
  "isActive": true,
  "isExpired": false,
  "isExternal": false,
  "notBefore": 2024-01-01T08:00:00.000Z,
  "operations": [
    "sign",
    "verify",
  ],
  "type": "OKP",
  "updatedAt": 2024-01-01T08:00:00.000Z,
  "use": "sig",
}
`;
